# rust-aoflagger

./: Cargo.toml  Makefile.toml  README.md  RELEASES.md  build.rs
.github/workflows/: coverage.yml  docker_test.yml  linux_test.yml  macos_test.yml  release.yml
src/: cxx_aoflagger.cc  cxx_aoflagger.rs  lib.rs
